--- a/app.json
+++ b/app.json
@@ -19,7 +19,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -27,7 +31,22 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+     [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow RandevunBurada to access your photos",
+          "cameraPermission": "Allow RandevunBurada to access your camera"
+        }
+     ],
+     [
+      "expo-media-library",
+      {
+        "photosPermission": "Allow RandevunBurada to access your photos.",
+        "savePhotosPermission": "Allow RandevunBurada to save photos.",
+        "isAccessMediaLocationEnabled": true
+      }
+    ]
     ],
     "experiments": {
       "typedRoutes": true
