--- a/package.json
+++ b/package.json
@@ -15,13 +15,23 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.2.2",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.5",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
+    "expo-camera": "^15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "^16.0.5",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -29,10 +39,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^1.14.0",
+    "react-native-otp-entry": "^1.7.3",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
