--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/slot": "^1.1.0",
@@ -45,6 +46,7 @@
     "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -62,6 +64,7 @@
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
