--- a/app.json
+++ b/app.json
@@ -32,21 +32,23 @@
     },
     "plugins": [
       "expo-router",
-     [
+      [
         "expo-image-picker",
         {
           "photosPermission": "Allow RandevunBurada to access your photos",
           "cameraPermission": "Allow RandevunBurada to access your camera"
         }
-     ],
-     [
-      "expo-media-library",
-      {
-        "photosPermission": "Allow RandevunBurada to access your photos.",
-        "savePhotosPermission": "Allow RandevunBurada to save photos.",
-        "isAccessMediaLocationEnabled": true
-      }
-    ]
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow RandevunBurada to access your photos.",
+          "savePhotosPermission": "Allow RandevunBurada to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ],
+      "expo-font",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
