--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@clerk/clerk-expo": "^1.2.2",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5.0.5",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
@@ -43,23 +43,25 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.456.0",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.1.23", 
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "^1.14.0",
+    "react-native-maps": "1.20.1",
     "react-native-otp-entry": "^1.7.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-svg": "^15.9.0",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
