--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
@@ -30,6 +31,7 @@
     "expo": "~51.0.28",
     "expo-av": "^14.0.7",
     "expo-camera": "^15.0.16",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "^15.0.7",
@@ -43,7 +45,8 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.456.0",
-    "nativewind": "^4.1.23", 
+    "moment": "^2.30.1",
+    "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
@@ -61,8 +64,8 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "3.31.1",
-    "react-native-toast-message": "^2.2.1",
     "react-native-svg": "^15.9.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
