--- a/package.json
+++ b/package.json
@@ -21,50 +21,50 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.28",
-    "expo-av": "^14.0.7",
-    "expo-camera": "^15.0.16",
-    "expo-checkbox": "~3.0.0",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
-    "expo-media-library": "^16.0.5",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "~52.0.18",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.9",
+    "expo-checkbox": "~4.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.4",
+    "expo-media-library": "~17.0.3",
+    "expo-router": "4.0.11",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "lucide-react-native": "^0.456.0",
     "moment": "^2.30.1",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-native": "0.74.5",
+    "react-native": "0.76.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-otp-entry": "^1.7.3",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-reanimated": "~3.16.5",
+    "react-native-reanimated-carousel": "4.0.0-canary.22",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.9.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
@@ -75,10 +75,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.3.3"
