--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "clsx": "^2.1.1",
     "expo": "~52.0.18",
     "expo-av": "~15.0.1",
+    "expo-blur": "^14.0.1",
     "expo-camera": "~16.0.9",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-image-manipulator": "~13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
@@ -58,7 +60,7 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.18.0",
-    "react-native-otp-entry": "^1.7.3", 
+    "react-native-otp-entry": "^1.7.3",
     "react-native-reanimated": "~3.16.5",
     "react-native-reanimated-carousel": "4.0.0-canary.22",
     "react-native-safe-area-context": "4.12.0",
