--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-device": "~7.0.1",
+    "expo-notifications": "~0.29.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
