--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_ZmlybS1vYXJmaXNoLTQuY2xlcmsuYWNjb3VudHMuZGV2JA"
 EXPO_PUBLIC_GOOGLE_PLACES_API_KEY="AIzaSyC-2xr9tE5YQRkPr2fQfwO8i_DSvC0XgLk"
+EXPO_PUBLIC_SHOW_IMAGE="0"
